# kraken-decompressor

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.rst  formate.toml  kraken.cpp  kraken.h  kraken_decompressor.cpp  meson.build  notes.md  pyproject.toml  repo_helper.yml  tox.ini
.github/workflows/: cibuildwheel.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml
kraken_decompressor-stubs/: __init__.pyi
misc/: __init__.py
tests/: test_decompression.py
